# ymp2

./: .gitignore  Makefile  Readme.md  meson.build  meson_options.txt
data/: obj.s  ympbuild-header.sh
debian/: changelog  rules
docs/: Doxyfile  Doxyfile.in  index.md  libymp.md  meson.build  plugin.md
docs/examples/: meson.build  operation.c
examples/: meson.build  ymp.vala
examples/core/: example.ympsh  interpreter.c  logger.c  ymp.c
examples/data/: build.c  dependency.c  package.c  repository.c
examples/utils/: archive.c  error.c  file.c  gpg.c  string.c  yaml.c
include/: config.h.in  jobs.h  operations.h  variable.h  ymp.h  ymp.vapi
include/core/: help.h  interpreter.h  logger.h  operations.h  variable.h  ymp.h
include/data/: build.h  dependency.h  package.h  quarantine.h  repository.h
include/utils/: archive.h  array.h  environment.h  error.h  file.h  gpg.h  gui.h  hash.h  jobs.h  process.h  string.h  yaml.h
plugin/: extract.c  hello.c  httpd.c  meson.build
src/: ctx.c.in  meson.build  operations.c  variable.c  ymp.c
src/core/: cli.c  help.c  interpreter.c  logger.c  operations.c  variable.c  ymp.c
src/data/: build.c  dependency.c  package.c  quarantine.c  repository.c
src/operations/: build.c  list.c  print.c
src/operations/package-manager/: build.c  info  info.c  install.c  key.c  list.c  remove.c  repo.c  search.c
src/operations/utility/: dialog.c  help.c  print.c  setget.c  sysconf.c
src/utils/: archive.c  array.c  environment.c  error.c  fetcher.c  file.c  gpg.c  gui.c  hash.c  jobs.c  libc.c  process.c  string.c  yaml.c
